Add SEO optimization: sitemap, robots.txt, and meta tags
- Add public/sitemap.xml for Google Search Console
- Add public/robots.txt for search engine crawlers
- Enhance index.html with comprehensive meta tags:
  - SEO tags (title, description, keywords, canonical)
  - Open Graph tags for Facebook
  - Twitter Card tags
  - Apple Touch Icon and theme color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <title>Agasteer</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Agasteer - GitHubと直接つながる、最もシンプルなMarkdownノートアプリ</title>
+    <meta
+      name="description"
+      content="Agasteer（アガスティーア）は、インストール不要・アカウント登録不要でブラウザで開くだけで使える、GitHub連携機能を持つシンプルなMarkdownノートアプリです。2ペイン表示、リアルタイムプレビュー、Vimモード対応。"
+    />
+    <meta
+      name="keywords"
+      content="Markdown,ノート,メモ,GitHub,同期,ブラウザアプリ,PWA,エディタ,Svelte,オープンソース"
+    />
+    <meta name="author" content="kako-jun" />
+    <link rel="canonical" href="https://agasteer.llll-ll.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://agasteer.llll-ll.com/" />
+    <meta
+      property="og:title"
+      content="Agasteer - GitHubと直接つながる、最もシンプルなMarkdownノートアプリ"
+    />
+    <meta
+      property="og:description"
+      content="インストール不要・アカウント登録不要でブラウザで開くだけで使える、GitHub連携機能を持つシンプルなMarkdownノートアプリ"
+    />
+    <meta property="og:image" content="https://agasteer.llll-ll.com/icon-512.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://agasteer.llll-ll.com/" />
+    <meta
+      name="twitter:title"
+      content="Agasteer - GitHubと直接つながる、最もシンプルなMarkdownノートアプリ"
+    />
+    <meta
+      name="twitter:description"
+      content="インストール不要・アカウント登録不要でブラウザで開くだけで使える、GitHub連携機能を持つシンプルなMarkdownノートアプリ"
+    />
+    <meta name="twitter:image" content="https://agasteer.llll-ll.com/icon-512.png" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="/icon-192.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#4a90e2" />
   </head>
   <body>
     <div id="app"></div>
